--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-  "name": "Mike-bot",
-  "description": "Rpg WhatsApp Bot",
-  "repository": "https://github.com/Dawnfrossty/Mike-bot",
+  "name": "RadBotZ",
+  "description": "WhatsApp Bot",
+  "repository": "https://github.com/Drz103/Botv-",
   "logo": "https://node-js-sample.herokuapp.com/node.png",
   "keywords": ["bot", "whatsapp", "whatsapp-bot"]
 }
